--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  padding: 0;
+  box-sizing: border-box;
+  background: linear-gradient(to right top, rgb(32, 210, 222), rgb(80, 224, 238));
+}
