--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -18,6 +18,11 @@
   grid-template-columns: repeat(3,1fr);
   padding: 18px;
 }
+h3{
+  position: absolute;
+  top:4%;
+
+}
 .square{
   width:99%;
   height:99%;
