--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -29,7 +29,7 @@ h3{
   border-width: 2px;
   border-style: solid;
   border-color: white;
-  color: black;
+  color: grey;
   display: flex;
   align-items: center;
   font-size: 3rem;
