--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 
-<h3>Player Turn : {{player_turn}}</h3>
+<h3>Player turn : {{player_turn}}</h3>
 <div class="game-container">
   <div class="game-board">
       <div  *ngFor="let square of board ; let i = index" class="square"  (click)="handlePlayer(i)">{{square}}</div>
